--- a/index.html
+++ b/index.html
@@ -4,17 +4,318 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>STRONG TEMPLATE</title>
   <link rel="icon" href="assets/img/favicon.png" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css?family=Lora:400,700|Roboto:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="libs/@fortawesome/fontawesome-free/css/all.min.css">
-  <style>body { opacity: 0; background-color: #d8b036; } html { overflow: hidden; }</style>
+  <style>
+    body {
+      /* opacity: 0; */
+      background-color: #d8b036;
+    }
+
+    html {
+      overflow: hidden;
+    }
+  </style>
 </head>
 
 <body>
 
+  <header class="header">
+    <div class="header-logo">
+      <div class="header-logo__img">
+        <img src="assets/img/logo.png" alt="header-logo">
+      </div>
+      <div class="header-logo__title">FLEXBOX TEMPLATE</div>
+      <div class="header-logo__description">Шаблон с применением flexbox для первого модуля, курса Front-end Web
+        Development</div>
+
+      <nav class="header-menu">
+        <ul class="header-menu__list">
+          <li class="header-menu__list-item"><a href="#">Главная</a></li>
+          <li class="header-menu__list-item"><a href="#">Страница</a></li>
+          <li class="header-menu__list-item"><a href="#">Запись</a></li>
+          <li class="header-menu__list-item"><a href="#">Контакты</a></li>
+          <li class="header-menu__list-item"><a href="#">О нас</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <div class="container">
+    <main class="main">
+      <div class="main-breadcrumb"><a href="#">Главная</a> <a href="#">Раздел</a> <span>Страница</span></div>
+
+      <div class="main-content">
+        <h1 class="main-content__title">Lorem ipsum dolor sit amet consectetur</h1>
+        <div class="main-content__body">
+          <div class="main-content-item">
+            <div class="main-content-item__wrapper">
+              <a href="">
+                <h3 class="main-content-item__title">Lorem ipsum dolor sit, amet consectetur adipisicing.</h3>
+                <div class="main-content-item__image">
+                  <img class="image-responsive" src="assets/img/samples/1.jpg" alt="item-image">
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="main-content-item">
+            <div class="main-content-item__wrapper">
+              <a href="">
+                <h3 class="main-content-item__title">Lorem ipsum dolor, sit amet consectetur adipisicing.</h3>
+                <div class="main-content-item__image">
+                  <img class="image-responsive" src="assets/img/samples/2.jpg" alt="item-image">
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="main-content-item">
+            <div class="main-content-item__wrapper">
+              <a href="">
+                <h3 class="main-content-item__title">Lorem ipsum dolor, sit amet consectetur adipisicing.</h3>
+                <div class="main-content-item__image">
+                  <img class="image-responsive" src="assets/img/samples/3.jpg" alt="item-image">
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="main-content-item">
+            <div class="main-content-item__wrapper">
+              <a href="">
+                <h3 class="main-content-item__title">Lorem ipsum dolor, sit amet consectetur adipisicing.</h3>
+                <div class="main-content-item__image">
+                  <img class="image-responsive" src="assets/img/samples/4.jpg" alt="item-image">
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="main-content-item">
+            <div class="main-content-item__wrapper">
+              <a href="">
+                <h3 class="main-content-item__title">Lorem ipsum dolor, sit amet consectetur adipisicing.</h3>
+                <div class="main-content-item__image">
+                  <img class="image-responsive" src="assets/img/samples/5.jpg" alt="item-image">
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="main-content-item">
+            <div class="main-content-item__wrapper">
+              <a href="">
+                <h3 class="main-content-item__title">Lorem ipsum dolor, sit amet consectetur adipisicing.</h3>
+                <div class="main-content-item__image">
+                  <img class="image-responsive" src="assets/img/samples/6.jpg" alt="item-image">
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="main-content-item">
+            <div class="main-content-item__wrapper">
+              <a href="">
+                <h3 class="main-content-item__title">Lorem ipsum dolor, sit amet consectetur adipisicing.</h3>
+                <div class="main-content-item__image">
+                  <img class="image-responsive" src="assets/img/samples/7.jpg" alt="item-image">
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="main-content-item">
+            <div class="main-content-item__wrapper">
+              <a href="">
+                <h3 class="main-content-item__title">Lorem ipsum dolor, sit amet consectetur adipisicing.</h3>
+                <div class="main-content-item__image">
+                  <img class="image-responsive" src="assets/img/samples/8.jpg" alt="item-image">
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="main-content-item">
+            <div class="main-content-item__wrapper">
+              <a href="">
+                <h3 class="main-content-item__title">Lorem ipsum dolor, sit amet consectetur adipisicing.</h3>
+                <div class="main-content-item__image">
+                  <img class="image-responsive" src="assets/img/samples/9.jpg" alt="item-image">
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="main-content-item">
+            <div class="main-content-item__wrapper">
+              <a href="">
+                <h3 class="main-content-item__title">Lorem ipsum dolor, sit amet consectetur adipisicing.</h3>
+                <div class="main-content-item__image">
+                  <img class="image-responsive" src="assets/img/samples/10.jpg" alt="item-image">
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="main-content-item">
+            <div class="main-content-item__wrapper">
+              <a href="">
+                <h3 class="main-content-item__title">Lorem ipsum dolor, sit amet consectetur adipisicing.</h3>
+                <div class="main-content-item__image">
+                  <img class="image-responsive" src="assets/img/samples/11.jpg" alt="item-image">
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="main-content-item">
+            <div class="main-content-item__wrapper">
+              <a href="">
+                <h3 class="main-content-item__title">Lorem ipsum dolor, sit amet consectetur adipisicing.</h3>
+                <div class="main-content-item__image">
+                  <img class="image-responsive" src="assets/img/samples/12.jpg" alt="item-image">
+                </div>
+              </a>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </main>
+
+    <aside class="left">
+      <div class="widget widget-search">
+        <h3>Поиск по сайту</h3>
+        <form action="search">
+          <button class="widget-search__submit"></button>
+          <input class="widget-search__input" type="text" placeholder="Введите текст...">
+        </form>
+      </div>
+      <div class="widget widget-categories">
+        <h3>Категории</h3>
+        <ul class="widget-categories__list">
+          <li class="widget-categories__item"><a href="#">HTML4 / HTML5</a></li>
+          <li class="widget-categories__item"><a href="#">CSS2 / CSS3</a></li>
+          <li class="widget-categories__item"><a href="#">Javascript / Jquery</a></li>
+          <li class="widget-categories__item"><a href="#">PHP / MySQL</a></li>
+          <li class="widget-categories__item"><a href="#">Less / Sass / Scss</a></li>
+          <li class="widget-categories__item"><a href="#">Wordpress</a></li>
+          <li class="widget-categories__item"><a href="#">Drupal</a></li>
+          <li class="widget-categories__item"><a href="#">Bootstrap</a></li>
+        </ul>
+      </div>
+      <div class="widget widget-text">
+        <h3>О шаблоне</h3>
+        <p>Шаблон разработан для изучения адаптивной верстки на HTML5, оформления с помощью CSS3, подключения готовых
+          библиотек и плагинов Jquery.</p>
+      </div>
+    </aside>
+
+    <aside class="right">
+      <div class="widget widget-news">
+        <h3>Новые статьи</h3>
+        <div class="widget-news__content">
+          <div class="widget-news__item">
+            <a href="#">
+              <div class="widget-news__item-wrapper">
+                <div class="widget-news__item-excerpt">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia ad eligendi eius molestiae
+                  blanditiis, ducimus a, et aliquam explicabo ea nulla facilis ipsa magnam, quasi laboriosam dolorem eum
+                  quis labore.
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="widget-news__item">
+            <a href="#">
+              <div class="widget-news__item-wrapper">
+                <div class="widget-news__item-excerpt">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis unde tenetur a eum, dolores nam ullam
+                  impedit facere laborum architecto distinctio! Incidunt id dicta dolor odio illum temporibus recusandae
+                  quibusdam.
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="widget-news__item">
+            <a href="#">
+              <div class="widget-news__item-wrapper">
+                <div class="widget-news__item-excerpt">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, at. Nihil voluptates perspiciatis quod
+                  illum. Corporis, assumenda dignissimos id aliquid deserunt ut minima nihil, quo laborum saepe, veniam
+                  laboriosam error?
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="widget-news__item">
+            <a href="#">
+              <div class="widget-news__item-wrapper">
+                <div class="widget-news__item-excerpt">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus repellendus doloribus, esse earum
+                  neque voluptatem sapiente molestiae iusto quo? Consequuntur, rem? Eveniet dolores atque doloremque
+                  earum illum, aspernatur sed quidem!
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="widget-news__item">
+            <a href="#">
+              <div class="widget-news__item-wrapper">
+                <div class="widget-news__item-excerpt">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab minima perspiciatis praesentium ratione
+                  incidunt tenetur autem neque suscipit exercitationem numquam, dolores sunt harum modi totam,
+                  voluptatum error sit, fuga sapiente?
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="widget-news__item">
+            <a href="#">
+              <div class="widget-news__item-wrapper">
+                <div class="widget-news__item-excerpt">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe vero qui omnis, aperiam, porro alias
+                  nihil fugiat velit maiores ipsa quibusdam ipsum itaque rem! Ad voluptatibus nobis consequatur porro
+                  ipsa!
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </aside>
+  </div>
+
+  <footer class="footer">
+    <div class="footer-top">
+      <div class="footer-top__item">
+        <div class="widget ">
+          <h3>Заголовок виджета</h3>
+          <p></p>
+        </div>
+      </div>
+
+      <div class="footer-top__item">
+        <div class="widget ">
+          <h3>Заголовок виджета</h3>
+          <p></p>
+        </div>
+      </div>
+      <div class="footer-top__item">
+        <div class="widget">
+          <h3>Заголовок виджета</h3>
+          <p></p>
+        </div>
+      </div>
+      <div class="footer-top__item">
+        <div class="widget">
+          <h3>Заголовок виджета</h3>
+          <p></p>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer-bottom">
+      <div class="widget">
+        <h3>Заголовок виджета</h3>
+        <p></p>
+      </div>
+    </div>
+  </footer>
 
   <link rel="stylesheet" href="assets/css/style.css">
 
@@ -23,4 +324,5 @@
   <script src="assets/js/main.js"></script>
 
 </body>
+
 </html>
