--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="libs/@fortawesome/fontawesome-free/css/all.min.css">
   <style>
     body {
-      /* opacity: 0; */
+      opacity: 0;
       background-color: #d8b036;
     }
 
@@ -26,23 +26,22 @@
 
   <header class="header">
     <div class="header-logo">
-      <div class="header-logo__img">
-        <img src="assets/img/logo.png" alt="header-logo">
-      </div>
-      <div class="header-logo__title">FLEXBOX TEMPLATE</div>
-      <div class="header-logo__description">Шаблон с применением flexbox для первого модуля, курса Front-end Web
-        Development</div>
-
-      <nav class="header-menu">
-        <ul class="header-menu__list">
-          <li class="header-menu__list-item"><a href="#">Главная</a></li>
-          <li class="header-menu__list-item"><a href="#">Страница</a></li>
-          <li class="header-menu__list-item"><a href="#">Запись</a></li>
-          <li class="header-menu__list-item"><a href="#">Контакты</a></li>
-          <li class="header-menu__list-item"><a href="#">О нас</a></li>
-        </ul>
-      </nav>
+      <img class="header-logo__image" src="assets/img/logo.png" alt="header-logo">
+      <strong class="header-logo__title">FLEXBOX TEMPLATE</strong>
+      <span class="header-logo__description">
+        Шаблон с применением flexbox для первого модуля, курса Front-end Web
+        Development
+      </span>
     </div>
+    <nav class="header-menu">
+      <ul class="header-menu__list">
+        <li class="header-menu__list-item active"><a href="#">Главная</a></li>
+        <li class="header-menu__list-item"><a href="#">Страница</a></li>
+        <li class="header-menu__list-item"><a href="#">Запись</a></li>
+        <li class="header-menu__list-item"><a href="#">Контакты</a></li>
+        <li class="header-menu__list-item"><a href="#">О нас</a></li>
+      </ul>
+    </nav>
   </header>
 
   <div class="container">
