--- a/index.html
+++ b/index.html
@@ -46,7 +46,11 @@
 
   <div class="container">
     <main class="main">
-      <div class="main-breadcrumb"><a href="#">Главная</a> <a href="#">Раздел</a> <span>Страница</span></div>
+      <div class="main-breadcrumb">
+        <span><a href="#">Главная</a></span><i class="fas fa-caret-right"></i>
+        <span><a href="#">Раздел</a></span><i class="fas fa-caret-right"></i>
+        <span>Страница</span>
+      </div>
 
       <div class="main-content">
         <h1 class="main-content__title">Lorem ipsum dolor sit amet consectetur</h1>
@@ -180,7 +184,7 @@
       <div class="widget widget-search">
         <h3>Поиск по сайту</h3>
         <form action="search">
-          <button class="widget-search__submit"></button>
+          <button class="widget-search__submit"><i class="fas fa-search"></i></button>
           <input class="widget-search__input" type="text" placeholder="Введите текст...">
         </form>
       </div>
@@ -211,6 +215,10 @@
           <div class="widget-news__item">
             <a href="#">
               <div class="widget-news__item-wrapper">
+                <h4 class="widget-news__item-title">Lorem ipsum dolor sit amet consectetur adipisicing.</h4>
+                <div class="widget-news__item-image">
+                  <img class="img-responsive" src="assets/img/samples/100x100___1.jpg" alt="">
+                </div>
                 <div class="widget-news__item-excerpt">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia ad eligendi eius molestiae
                   blanditiis, ducimus a, et aliquam explicabo ea nulla facilis ipsa magnam, quasi laboriosam dolorem eum
@@ -222,6 +230,10 @@
           <div class="widget-news__item">
             <a href="#">
               <div class="widget-news__item-wrapper">
+                <h4 class="widget-news__item-title">Lorem ipsum dolor sit amet, consectetur adipisicing.</h4>
+                <div class="widget-news__item-image">
+                  <img class="img-responsive" src="assets/img/samples/100x100___2.jpg" alt="">
+                </div>
                 <div class="widget-news__item-excerpt">
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis unde tenetur a eum, dolores nam ullam
                   impedit facere laborum architecto distinctio! Incidunt id dicta dolor odio illum temporibus recusandae
@@ -233,6 +245,10 @@
           <div class="widget-news__item">
             <a href="#">
               <div class="widget-news__item-wrapper">
+                <h4 class="widget-news__item-title">Lorem ipsum dolor sit amet consectetur adipisicing.</h4>
+                <div class="widget-news__item-image">
+                  <img class="img-responsive" src="assets/img/samples/100x100___3.jpg" alt="">
+                </div>
                 <div class="widget-news__item-excerpt">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, at. Nihil voluptates perspiciatis quod
                   illum. Corporis, assumenda dignissimos id aliquid deserunt ut minima nihil, quo laborum saepe, veniam
@@ -244,6 +260,10 @@
           <div class="widget-news__item">
             <a href="#">
               <div class="widget-news__item-wrapper">
+                <h4 class="widget-news__item-title">Lorem ipsum dolor sit amet, consectetur adipisicing.</h4>
+                <div class="widget-news__item-image">
+                  <img class="img-responsive" src="assets/img/samples/100x100___4.jpg" alt="">
+                </div>
                 <div class="widget-news__item-excerpt">
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus repellendus doloribus, esse earum
                   neque voluptatem sapiente molestiae iusto quo? Consequuntur, rem? Eveniet dolores atque doloremque
@@ -255,6 +275,10 @@
           <div class="widget-news__item">
             <a href="#">
               <div class="widget-news__item-wrapper">
+                <h4 class="widget-news__item-title">Lorem, ipsum dolor sit amet consectetur adipisicing.</h4>
+                <div class="widget-news__item-image">
+                  <img class="img-responsive" src="assets/img/samples/100x100___5.jpg" alt="">
+                </div>
                 <div class="widget-news__item-excerpt">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab minima perspiciatis praesentium ratione
                   incidunt tenetur autem neque suscipit exercitationem numquam, dolores sunt harum modi totam,
@@ -266,6 +290,10 @@
           <div class="widget-news__item">
             <a href="#">
               <div class="widget-news__item-wrapper">
+                <h4 class="widget-news__item-title">Lorem, ipsum dolor sit amet consectetur adipisicing.</h4>
+                <div class="widget-news__item-image">
+                  <img class="img-responsive" src="assets/img/samples/100x100___6.jpg" alt="">
+                </div>
                 <div class="widget-news__item-excerpt">
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe vero qui omnis, aperiam, porro alias
                   nihil fugiat velit maiores ipsa quibusdam ipsum itaque rem! Ad voluptatibus nobis consequatur porro
