--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport"
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>STRONG TEMPLATE</title>
+  <title>TEMPLATE HOMEWORK</title>
   <link rel="icon" href="assets/img/favicon.png" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css?family=Lora:400,700|Roboto:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="libs/@fortawesome/fontawesome-free/css/all.min.css">
@@ -60,8 +60,10 @@
               <a href="">
                 <h3 class="main-content-item__title">Lorem ipsum dolor sit, amet consectetur adipisicing.</h3>
                 <div class="main-content-item__image">
-                  <img class="image-responsive" src="assets/img/samples/1.jpg" alt="item-image">
+                  <img class="img-responsive" src="assets/img/samples/1.jpg" alt="item-image">
                 </div>
+                <div class="main-content-item__excerpt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id
+                  architecto maiores.</div>
               </a>
             </div>
           </div>
@@ -70,8 +72,10 @@
               <a href="">
                 <h3 class="main-content-item__title">Lorem ipsum dolor, sit amet consectetur adipisicing.</h3>
                 <div class="main-content-item__image">
-                  <img class="image-responsive" src="assets/img/samples/2.jpg" alt="item-image">
+                  <img class="img-responsive" src="assets/img/samples/2.jpg" alt="item-image">
                 </div>
+                <div class="main-content-item__excerpt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id
+                  architecto maiores.</div>
               </a>
             </div>
           </div>
@@ -80,8 +84,10 @@
               <a href="">
                 <h3 class="main-content-item__title">Lorem ipsum dolor, sit amet consectetur adipisicing.</h3>
                 <div class="main-content-item__image">
-                  <img class="image-responsive" src="assets/img/samples/3.jpg" alt="item-image">
+                  <img class="img-responsive" src="assets/img/samples/3.jpg" alt="item-image">
                 </div>
+                <div class="main-content-item__excerpt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id
+                  architecto maiores.</div>
               </a>
             </div>
           </div>
@@ -90,8 +96,10 @@
               <a href="">
                 <h3 class="main-content-item__title">Lorem ipsum dolor, sit amet consectetur adipisicing.</h3>
                 <div class="main-content-item__image">
-                  <img class="image-responsive" src="assets/img/samples/4.jpg" alt="item-image">
+                  <img class="img-responsive" src="assets/img/samples/4.jpg" alt="item-image">
                 </div>
+                <div class="main-content-item__excerpt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id
+                  architecto maiores.</div>
               </a>
             </div>
           </div>
@@ -100,8 +108,10 @@
               <a href="">
                 <h3 class="main-content-item__title">Lorem ipsum dolor, sit amet consectetur adipisicing.</h3>
                 <div class="main-content-item__image">
-                  <img class="image-responsive" src="assets/img/samples/5.jpg" alt="item-image">
+                  <img class="img-responsive" src="assets/img/samples/5.jpg" alt="item-image">
                 </div>
+                <div class="main-content-item__excerpt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id
+                  architecto maiores.</div>
               </a>
             </div>
           </div>
@@ -110,8 +120,10 @@
               <a href="">
                 <h3 class="main-content-item__title">Lorem ipsum dolor, sit amet consectetur adipisicing.</h3>
                 <div class="main-content-item__image">
-                  <img class="image-responsive" src="assets/img/samples/6.jpg" alt="item-image">
+                  <img class="img-responsive" src="assets/img/samples/6.jpg" alt="item-image">
                 </div>
+                <div class="main-content-item__excerpt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id
+                  architecto maiores.</div>
               </a>
             </div>
           </div>
@@ -120,8 +132,10 @@
               <a href="">
                 <h3 class="main-content-item__title">Lorem ipsum dolor, sit amet consectetur adipisicing.</h3>
                 <div class="main-content-item__image">
-                  <img class="image-responsive" src="assets/img/samples/7.jpg" alt="item-image">
+                  <img class="img-responsive" src="assets/img/samples/7.jpg" alt="item-image">
                 </div>
+                <div class="main-content-item__excerpt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id
+                  architecto maiores.</div>
               </a>
             </div>
           </div>
@@ -130,8 +144,10 @@
               <a href="">
                 <h3 class="main-content-item__title">Lorem ipsum dolor, sit amet consectetur adipisicing.</h3>
                 <div class="main-content-item__image">
-                  <img class="image-responsive" src="assets/img/samples/8.jpg" alt="item-image">
+                  <img class="img-responsive" src="assets/img/samples/8.jpg" alt="item-image">
                 </div>
+                <div class="main-content-item__excerpt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id
+                  architecto maiores.</div>
               </a>
             </div>
           </div>
@@ -140,8 +156,10 @@
               <a href="">
                 <h3 class="main-content-item__title">Lorem ipsum dolor, sit amet consectetur adipisicing.</h3>
                 <div class="main-content-item__image">
-                  <img class="image-responsive" src="assets/img/samples/9.jpg" alt="item-image">
+                  <img class="img-responsive" src="assets/img/samples/9.jpg" alt="item-image">
                 </div>
+                <div class="main-content-item__excerpt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id
+                  architecto maiores.</div>
               </a>
             </div>
           </div>
@@ -150,8 +168,10 @@
               <a href="">
                 <h3 class="main-content-item__title">Lorem ipsum dolor, sit amet consectetur adipisicing.</h3>
                 <div class="main-content-item__image">
-                  <img class="image-responsive" src="assets/img/samples/10.jpg" alt="item-image">
+                  <img class="img-responsive" src="assets/img/samples/10.jpg" alt="item-image">
                 </div>
+                <div class="main-content-item__excerpt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id
+                  architecto maiores.</div>
               </a>
             </div>
           </div>
@@ -160,8 +180,10 @@
               <a href="">
                 <h3 class="main-content-item__title">Lorem ipsum dolor, sit amet consectetur adipisicing.</h3>
                 <div class="main-content-item__image">
-                  <img class="image-responsive" src="assets/img/samples/11.jpg" alt="item-image">
+                  <img class="img-responsive" src="assets/img/samples/11.jpg" alt="item-image">
                 </div>
+                <div class="main-content-item__excerpt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id
+                  architecto maiores.</div>
               </a>
             </div>
           </div>
@@ -170,8 +192,10 @@
               <a href="">
                 <h3 class="main-content-item__title">Lorem ipsum dolor, sit amet consectetur adipisicing.</h3>
                 <div class="main-content-item__image">
-                  <img class="image-responsive" src="assets/img/samples/12.jpg" alt="item-image">
+                  <img class="img-responsive" src="assets/img/samples/12.jpg" alt="item-image">
                 </div>
+                <div class="main-content-item__excerpt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id
+                  architecto maiores.</div>
               </a>
             </div>
           </div>
@@ -183,7 +207,7 @@
     <aside class="left">
       <div class="widget widget-search">
         <h3>Поиск по сайту</h3>
-        <form action="search">
+        <form action="#">
           <button class="widget-search__submit"><i class="fas fa-search"></i></button>
           <input class="widget-search__input" type="text" placeholder="Введите текст...">
         </form>
@@ -312,26 +336,31 @@
       <div class="footer-top__item">
         <div class="widget ">
           <h3>Заголовок виджета</h3>
-          <p></p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A earum facere minus officia porro. Atque ducimus
+            excepturi illo ipsa, nam necessitatibus odit recusandae unde! Eligendi harum itaque minima quis. Labore.</p>
         </div>
       </div>
 
       <div class="footer-top__item">
         <div class="widget ">
           <h3>Заголовок виджета</h3>
-          <p></p>
+          <p>Accusantium, ad, beatae dignissimos dolorem doloremque ducimus est illo libero magnam numquam obcaecati
+            officia officiis omnis perspiciatis, provident repellat sapiente suscipit tenetur!</p>
         </div>
       </div>
       <div class="footer-top__item">
         <div class="widget">
           <h3>Заголовок виджета</h3>
-          <p></p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam, modi officiis. Adipisci consectetur
+            deleniti dolorem dolorum ducimus esse laborum nam natus nobis officiis perferendis, qui rem sapiente, sed
+            totam voluptatibus.</p>
         </div>
       </div>
       <div class="footer-top__item">
         <div class="widget">
           <h3>Заголовок виджета</h3>
-          <p></p>
+          <p>Lorem esse eveniet fugit ipsum labore molestiae mollitia nesciunt, nulla quae similique, tempore tenetur
+            vel.</p>
         </div>
       </div>
     </div>
@@ -339,7 +368,7 @@
     <div class="footer-bottom">
       <div class="widget">
         <h3>Заголовок виджета</h3>
-        <p></p>
+        <p>Обычный текст виджета...</p>
       </div>
     </div>
   </footer>
