--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
       </span>
     </div>
     <nav class="header-menu">
+      <div class="header-menu__btn">
+        <div class="header-menu__btn-row"></div>
+        <div class="header-menu__btn-row"></div>
+        <div class="header-menu__btn-row"></div>
+      </div>
       <ul class="header-menu__list">
         <li class="header-menu__list-item active"><a href="#">Главная</a></li>
         <li class="header-menu__list-item"><a href="#">Страница</a></li>
